<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory app:title="@string/header_search">
        <SwitchPreferenceCompat
            android:defaultValue="true"
            android:key="isSaveHistory"
            android:summary="@string/summary_save_history"
            android:title="@string/title_save_history" />
        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="isSafeSearch"
            android:summary="@string/summary_safe_search"
            android:title="@string/title_safe_search" />
        <Preference
            android:clickable="true"
            android:key="delete_history"
            android:summary="@string/summary_search_history"
            android:title="@string/title_search_history" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/title_display">
        <ListPreference
            android:title="@string/select_theme"
            android:summary="@string/summary_select_theme"
            android:key="select_theme"
            android:entries="@array/entry_sample"
            android:entryValues="@array/entry_sample_values"
            />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/header_app">
        <Preference
            android:key="help"
            android:summary="@string/summary_help"
            android:title="@string/title_help" />
        <Preference
            android:key="about_app"
            android:summary="@string/summary_about_app"
            android:title="@string/title_about_app" />
    </PreferenceCategory>
</PreferenceScreen>